WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293989
[Site Isolation] Escape doesn't exit fullscreen with site isolated fullscreen content
https://bugs.webkit.org/show_bug.cgi?id=293989
Summary
[Site Isolation] Escape doesn't exit fullscreen with site isolated fullscreen...
Nikos Mouchtaris
Reported
2025-06-03 15:53:28 PDT
[Site Isolation] Escape doesn't exit fullscreen with site isolated fullscreen content
Attachments
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2025-06-03 16:25:15 PDT
<
rdar://problem/150307508
>
Nikos Mouchtaris
Comment 2
2025-06-03 16:32:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46289
EWS
Comment 3
2025-06-09 10:37:22 PDT
Committed
296004@main
(c9c6fd9ba28a): <
https://commits.webkit.org/296004@main
> Reviewed commits have been landed. Closing PR #46289 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug