[Site Isolation] Escape doesn't exit fullscreen with site isolated fullscreen content https://bugs.webkit.org/show_bug.cgi?id=293989 rdar://150307508

Reviewed by Tim Nguyen.

Hitting escape routes the key event to the correct process and eventually calls down into
DocumentFullscreen::fullyExitFullscreen, which currently doesn't work for subframe processes,
as mainFrameDocument() will return null. Instead use the root frame's document for this case.

* LayoutTests/http/tests/site-isolation/fullscreen-escape-key-expected.txt: Added.
* LayoutTests/http/tests/site-isolation/fullscreen-escape-key.html: Added.
* LayoutTests/http/tests/site-isolation/resources/fullscreen-escape-key.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/dom/DocumentFullscreen.cpp:
(WebCore::DocumentFullscreen::fullyExitFullscreen):

Canonical link: https://commits.webkit.org/296004@main